# BJTU-

./: .gitignore  AGENTS.md  README.md  pyproject.toml
bjtu_rooms/: __init__.py  app.py  cli.py  core.py  credentials.py  models.py  parser.py  storage.py  sync.py
docs/architecture/: current-state.md
static/: app.js  index.html  styles.css
tests/: test_core.py  test_parser.py  test_storage.py
